add label and input field for birthday

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body>
   <h2>Get Your Akan Name</h2>
   <form id="bdayform">
-    
+    <label for="txt_bday">Enter birthday date:</label><br>
   </form>
 </body>
 
