add label and select field for gender

--- a/index.html
+++ b/index.html
@@ -9,6 +9,13 @@
   <h2>Get Your Akan Name</h2>
   <form id="bdayform">
     <label for="txt_bday">Enter birthday date:</label><br>
+    <input type="date" id="txt_bday" name="bday"><br><br>
+    <label for="select_gender">Enter your gender:</label><br>
+    <select id="select_gender">
+      <option value="empty">Select your gender</option>
+      <option value="male">Male</option>
+      <option value="female">Female</option>
+    </select><br><br>
   </form>
 </body>
 
