add placeholder for akan name

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
       <option value="male">Male</option>
       <option value="female">Female</option>
     </select><br><br>
+    <span id="span_akan_name"></span><br><br>
   </form>
 </body>
 
