add submit button

--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
       <option value="female">Female</option>
     </select><br><br>
     <span id="span_akan_name"></span><br><br>
+    <a href="javascript:getDate()">Submit</a>
   </form>
 </body>
 
