Add paragraph block elements to the page

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 
 <body>
   <h2>Get Your Akan Name</h2>
+  <p>This is an application that takes a user's birthday,calculates the day of the week when they were born and then depending on their gender outputs their Akan name.</p>
   <form id="bdayform">
     <label for="txt_bday">Enter birthday date:</label><br>
     <input type="date" id="txt_bday" name="bday"><br><br>
